# husky-support-platform

./: .gitignore  CMakeLists.txt  README.md  husky-support-platform.files  husky-support-platform.includes  package.xml  vehicleDoc.json
backup/: UGVControl.cpp  UGVControl.h
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/hsp_gui/: hsp_gui
devel/lib/pkgconfig/: hsp_gui.pc  ugv_control.pc
devel/lib/ugv_control/: mover
devel/share/hsp_gui/cmake/: hsp_guiConfig.cmake
devel/share/ugv_control/cmake/: ugv_controlConfig.cmake
husky/: CMakeLists.txt  package.xml
husky/include/: UGVControl.h
husky/src/: UGVControl.cpp
include/: MainWindow.h  UGVControl.h
resources/: MainWindow.ui
src/: MainWindow.cpp  UGVControl.cpp  main.cpp  vehicleDoc.json
src/UGVControl/devel/: .catkin  .rosinstall  setup.sh
src/UGVControl/devel/lib/UGVControl/: mover
src/UGVControl/devel/lib/husky/: mover
src/UGVControl/devel/lib/pkgconfig/: UGVControl.pc  husky.pc  ugv_control.pc
src/UGVControl/devel/lib/ugv_control/: mover
src/UGVControl/devel/share/UGVControl/cmake/: UGVControl-msg-paths.cmake  UGVControlConfig.cmake
src/UGVControl/devel/share/husky/cmake/: husky-msg-extras.cmake  husky-msg-paths.cmake  huskyConfig.cmake
src/UGVControl/devel/share/roseus/ros/UGVControl/: manifest.l
src/UGVControl/devel/share/roseus/ros/husky/: manifest.l
src/UGVControl/devel/share/roseus/ros/ugv_control/: manifest.l
src/UGVControl/devel/share/ugv_control/cmake/: ugv_control-msg-paths.cmake  ugv_controlConfig.cmake
src/UGVControl/src/ugv_control/: CMakeLists.txt
src/UGVControl/src/ugv_control/include/: UGVControl.h
src/UGVControl_GUI/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
src/hsp_gui/: CMakeLists.txt  package.xml
src/hsp_gui/include/: MainWindow.h  UGVControl.h  data_types.h  vehicle_control.h
src/hsp_gui/resources/: MainWindow.ui  MainWindow.ui.autosave
src/hsp_gui/src/: MainWindow.cpp  UGVControl.cpp  main.cpp
src/hsp_gui/voice_recognition/: CommandParser.cpp  VoiceRecognition.cpp
src/mocap_optitrack/src/: mocap_node.cpp
src/mocap_system/config/: mocap.yaml
src/mocap_system/src/: mocap_config.cpp
src/path_planning/: .gitignore  CMakeLists.txt  main.cpp  obstacle.cpp  obstacle.h  package.xml  path_planning.cpp  path_planning.h
src/path_planning/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml
src/path_planning/src/: Graph.cpp  Graph.h  Obstacle.cpp  Obstacle.h  Path.cpp  Path.h  PathPlanning.cpp  PathPlanning.h  ServiceCall.cpp  ServiceCall.h  driver.cpp  driverServer.cpp
src/ugv_control/: CMakeLists.txt  package.xml
src/ugv_control/include/: Demo.h  Destination.h  HuskyStatus.h  Position.h  UGVControl.h
src/ugv_control/src/: .mover.cpp.swp  Demo.cpp  Position.cpp  UGVControl.cpp  Vector.cpp  mover.cpp  position_tester.cpp
ugv_control/: CMakeLists.txt
ugv_control/include/: PosDesAligner.h  Vector.h  VectorAngleCalculator.h
ugv_control/src/: Destination.cpp  PosDesAligner.cpp  VectorAngleCalculator.cpp
usb_cam/nodes/: usb_cam_node.cpp
